# streamtracer

./: .codespellrc  .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  CHANGELOG.rst  Cargo.toml  MANIFEST.in  README.md  README.rst  RELEASING.md  asv.conf.json  azure-pipelines.yml  codecov.yml  pyproject.toml  pyproject.toml.rej  pytest.ini  setup.cfg  setup.py  tox.ini  tox.ini.rej
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  pre-commit.yml  python-test.yml  sub_package_update.yml  wheels.yml
benchmarks/: benchmark.py  benchmark_plot.py  benchmarks.py  pyinst.py
changelog/: 192.breaking.rst  211.feature.rst  211.trivial.rst  README.rst
doc/: conf.py  index.rst  requirements.txt  streamtracer.rst
docs/: changelog.rst  conf.py  index.rst
docs/whatsnew/: index.rst
python/streamtracer/: __init__.py  streamline.py  version.py
python/streamtracer/tests/: test_streamline.py
requirements/: docs.txt
src/: field.rs  interp.rs  lib.rs  test_field.rs  test_interp.rs  test_tracer.rs  trace.rs
streamtracer/: __init__.py  streamline.py
streamtracer/fortran/: Streamtracer.f90  compile_linux.sh  compile_win.cmd
streamtracer/tests/: test_streamline.py
tests/: test_field.rs  test_interp.rs  test_tracer.rs
