[package]
name = "streamtracer"
version = "2.0.1"
edition = "2021"

[package.metadata.maturin]
python-source = "python"
name = "streamtracer._streamtracer_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "streamtracer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.20", features = ["extension-module"]}
numpy = "0.20"
num-traits = "0.2"
num-derive = "0.3"
rayon = "1.8"
ndarray = {version = "0.15", features = ["rayon"]}

[dev-dependencies]
float_eq = "1.0.0"
