[package]
name = "streamtracer"
version = "2.1.0-rc.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "streamtracer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.21", features = ["extension-module"]}
numpy = "0.21"
num-traits = "0.2"
num-derive = "0.4"
rayon = "1.8"
ndarray = {version = "0.15", features = ["rayon"]}

[dev-dependencies]
float_eq = "1.0.0"

[lints.clippy]
needless_return = "allow"
implicit_return = "warn"
