[package]
name = "streamtracer"
# rc versions in rust landhave the format x.y.z-rc.q
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "streamtracer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22", features = ["extension-module"]}
numpy = "0.22"  # I think this should follow the pyo3 version, but it can be slow to release
num-traits = "0.2"
num-derive = "0.4"
rayon = "1.10"
ndarray = {version = "0.16", features = ["rayon"]}

[dev-dependencies]
float_eq = "1.0.0"

[lints.clippy]
needless_return = "allow"
implicit_return = "warn"

[profile.release]
codegen-units = 1
