[build-system]
requires = [
    "maturin>=1.0,<2.0",
]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "streamtracer._streamtracer_rust"

[project]
name = "streamtracer"
description = "Python library to calculate streamlines"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "The SunPy Developers", email="sunpy@googlegroups.com"},
  {name = "David Stansby"},
  {name = "Lars Mejnertsen"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
version = "2.1.0.rc2"
dependencies = [
  "numpy>=1.23",
  "packaging>=21.3",
]

[project.urls]
Homepage = "https://docs.sunpy.org/projects/streamtracer"
Documentation = "https://docs.sunpy.org/projects/streamtracer"
Repository = "https://github.com/sunpy/streamtracer"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "jupyter-sphinx",
  "sunpy-sphinx-theme",
]

[tool.cibuildwheel]
before-build = "rustup show"
environment = {"PATH" = "$PATH:$HOME/.cargo/bin"}

[tool.cibuildwheel.linux]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"

[tool.cibuildwheel.macos]
before-all = "rustup target add aarch64-apple-darwin"
