[build-system]
requires = [
    "maturin>=1.0,<2.0",
]
build-backend = "maturin"

[project]
name = "streamtracer"
description = "Python library to calculate streamlines"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  {name = "The SunPy Developers", email="sunpy@googlegroups.com"},
  {name = "David Stansby"},
  {name = "Lars Mejnertsen"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
version = "2.5.0"
dependencies = [
  "numpy>=1.26",
  "packaging>=21.3",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sunpy-sphinx-theme",
  "packaging",
  "jupyter-sphinx",
  "sphinx-changelog",
]

[project.urls]
Homepage = "https://sunpy.org"
"Source Code" = "https://github.com/sunpy/streamtracer"
Download = "https://pypi.org/project/streamtracer"
Documentation = "https://docs.sunpy.org/projects/streamtracer"
Changelog = "https://docs.sunpy.org/projects/streamtracer/en/stable/whatsnew/changelog.html"
"Issue Tracker" = "https://github.com/sunpy/streamtracer/issues"

[tool.maturin]
python-source = "python"
module-name = "streamtracer._streamtracer_rust"

[tool.cibuildwheel]
before-build = "rustup show"
environment = {"PATH" = "$PATH:$HOME/.cargo/bin"}

[tool.cibuildwheel.linux]
before-all = "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y"

[tool.cibuildwheel.macos]
environment = {"MACOSX_DEPLOYMENT_TARGET" = "10.12"}
before-all = "rustup target add aarch64-apple-darwin; rustup target add x86_64-apple-darwin"

[tool.setuptools_scm]
version_file = "streamtracer/version.py"

[tool.gilesbot]
  [tool.gilesbot.pull_requests]
  enabled = true

  [tool.gilesbot.towncrier_changelog]
  enabled = true
  verify_pr_number = true
  changelog_skip_label = "No Changelog Entry Needed"
  help_url = "https://github.com/sunpy/streamtracer/blob/main/changelog/README.rst"

  changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/streamtracer/blob/main/changelog/README.rst)."

  type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/streamtracer/blob/main/changelog/README.rst)"

  number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

# TODO: This should be in towncrier.toml but Giles currently only works looks in
# pyproject.toml we should move this back when it's fixed.
[tool.towncrier]
  package = "streamtracer"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/sunpy/streamtracer/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "New Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Internal Changes"
  showcontent = true
