[metadata]
name = streamtracer
provides = streamtracer
description = "Python wrapped fortran to calculate streamlines"
author = David Stansby, Lars Mejnertsen
author_email = dstansby@gmail.com
url=https://streamtracer.readthedocs.io/en/stable/
license = GPL v3
license_file = LICENSE
platform = any
version=1.0.2

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires = numpy>=1.14.5
setup_requires = numpy>=1.14.5
