[metadata]
name = streamtracer
provides = streamtracer
description = "Python wrapped fortran to calculate streamlines"
author = David Stansby, Lars Mejnertsen
author_email = dstansby@gmail.com
url=https://streamtracer.readthedocs.io/en/stable/
license = GPL v3
license_file = LICENSE
platform = any
version=1.1.1.rc1

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires = numpy>=1.14.5

[options.extras_require]
tests =
  pytest
  pytest-cov
docs =
  numpydoc
  sphinx
  sphinx-automodapi
  sphinx_rtd_theme
