[metadata]
name = streamtracer
provides = streamtracer
description = "Python wrapped fortran to calculate streamlines"
author = David Stansby, Lars Mejnertsen
author_email = dstansby@gmail.com
url=https://streamtracer.readthedocs.io/en/stable/
license = GPL v3
license_file = LICENSE
platform = any
version=1.2.0

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires = numpy>=1.14.5

[options.extras_require]
tests =
  pytest
  pytest-cov
docs =
  jupyter-sphinx
  numpydoc
  pydata-sphinx-theme
  sphinx
  sphinx-automodapi
  sphinx_rtd_theme

[tool:pytest]
addopts = -ra
testpaths =
  streamtracer
